exports[`Storyshots Brand default 1`] = `
<span
  className="Brand">
  Ojek 
  <i
    aria-hidden="true"
    className="fa fa-motorcycle" />
  <i
    aria-hidden="true"
    className="fa fa-shopping-cart" />
   Belanja
</span>
`;

exports[`Storyshots Button icon 1`] = `
<div
  style={
    Object {
      "width": 200,
    }
  }>
  <button
    className="Button Button-icon Button-secondary"
    disabled={true}
    onClick={[Function]}
    title="Hapus"
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-trash fa-lg" />
  </button>
</div>
`;

exports[`Storyshots Button text 1`] = `
<div
  style={
    Object {
      "width": 200,
    }
  }>
  <button
    className="Button Button-fullwidth"
    disabled={false}
    onClick={[Function]}
    title=""
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-shopping-cart fa-lg" />
     Beli
  </button>
</div>
`;

exports[`Storyshots DescriptionList default 1`] = `
<dl
  className="DescriptionList">
  <div>
    <dt>
      No. Pesanan
    </dt>
    <dd>
      -
    </dd>
  </div>
  <div>
    <dt>
      Tanggal Pengiriman
    </dt>
    <dd>
      -
    </dd>
  </div>
  <div>
    <dt>
      Nama
    </dt>
    <dd>
      Zain Fathoni
    </dd>
  </div>
  <div>
    <dt>
      Panggilan
    </dt>
    <dd>
      zain
    </dd>
  </div>
  <div>
    <dt>
      Email
    </dt>
    <dd>
      zain.fathoni@gmail.com
    </dd>
  </div>
  <div>
    <dt>
      No. HP
    </dt>
    <dd>
      087821307700
    </dd>
  </div>
  <div>
    <dt>
      Kota
    </dt>
    <dd>
      Bandung
    </dd>
  </div>
  <div>
    <dt>
      Alamat
    </dt>
    <dd>
      Tubagus Ismail
    </dd>
  </div>
  <div>
    <dt>
      Catatan
    </dt>
    <dd>
      Telepon saja kalau sudah sampai lokasi
    </dd>
  </div>
</dl>
`;
